# notebooks_invest

./: .gitignore  README.md  pyproject.toml  requirements.txt
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  design_patterns.md  project_overview.md  suggested_commands.md  task_completion.md  tech_stack.md
countries/: Country Performance Table.ipynb
cycles/: Benner Cycle.ipynb  Presidential Cycle.ipynb  README.md
data/edgar/: Download SEC XBRL.ipynb  EPS Plot.ipynb  Earnings for S&P 500 components.ipynb  Earnings from SEC JSON APIs.ipynb  Insider Trading Form 4.ipynb  NASDAQ100 Components with Sector.ipynb  Plot Insider Trading.ipynb  README.md  (+2 more)
indicators/: Mansfield Relative Strength.ipynb
insiders/: Insider Monitor.ipynb  Insiders_Sec.ipynb  README.md  SEC Edgar - Parse Form 4.ipynb  SEC Edgar Downloader.ipynb
machine_learning/: Deep Learning - Part 1.ipynb
seasonality/: SP500 Seasonal Composite Average Daily Movement Chart.ipynb  SP500 Seasonal Composite Chart.ipynb  SP500 Sector Returns.ipynb  Seasonality for the day of the month.ipynb  Seasonality for the day of the month_back.ipynb  Seasonality per Month and Sector.ipynb  Sector Seasonality for the day of the month.ipynb  copy-Copy1.ipynb  copy.ipynb
strategies/: Buy and Hold.ipynb  Fibonacci-Retracement.ipynb  Max-ATR.ipynb  Moving Average Crossover.ipynb  README.md  Sec API.ipynb  Simple Gold Strategy - Backtest.ipynb  Simple Gold Strategy - QuantStats.ipynb  Simple Gold Strategy.ipynb  Simple RSI.ipynb  Untitled.ipynb  base.py  util.py
(+29 files in other folders)
