[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebooks_invest"
version = "0.1.0"
description = "Stock market analysis notebooks for historical data insights"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Stock Market Analysis Team"}
]
requires-python = ">=3.8"
dependencies = [
    # Core data analysis
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    
    # Financial data sources
    "yfinance>=0.2.0",
    "investpy>=1.0.8",
    "finvizfinance>=0.14.0",
    
    # SEC and regulatory data
    "secedgar>=0.4.0",
    "sec-edgar-downloader>=5.0.0",
    
    # Trading and backtesting
    "backtrader>=1.9.76",
    
    # Visualization
    "plotly>=5.0.0",
    "mplfinance>=0.12.0",
    "finplot>=1.9.0",
    "altair>=4.2.0",
    "altair-viewer>=0.4.0",
    
    # Jupyter environment
    "notebook>=6.5.0",
    "ipywidgets>=7.5.0",
    
    # Utilities
    "termcolor>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pytest>=7.0.0",
]
extra = [
    "cufflinks>=0.17.3",
    "vega>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/danielsobrado/notebooks_invest"
Repository = "https://github.com/danielsobrado/notebooks_invest"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
